--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,8 +5,8 @@
  */
 
 :root {
-	--accent: #2337ff;
-	--accent-dark: #000d8a;
+	--accent: #007acc;
+	--accent-dark: #005299;
 	--black: 15, 18, 25;
 	--gray: 96, 115, 159;
 	--gray-light: 229, 233, 240;
@@ -45,9 +45,9 @@ body {
 }
 main {
 	width: 720px;
-	max-width: calc(100% - 2em);
+	max-width: calc(100% - 32px);
 	margin: auto;
-	padding: 3em 1em;
+	padding: 48px 16px;
 }
 h1,
 h2,
@@ -55,7 +55,7 @@ h3,
 h4,
 h5,
 h6 {
-	margin: 0 0 0.5rem 0;
+	margin: 0 0 8px 0;
 	color: rgb(var(--black));
 	line-height: 1.2;
 }
@@ -85,10 +85,10 @@ a:hover {
 	color: var(--accent);
 }
 p {
-	margin-bottom: 1em;
+	margin-bottom: 16px;
 }
 .prose p {
-	margin-bottom: 2em;
+	margin-bottom: 32px;
 }
 textarea {
 	width: 100%;
@@ -103,15 +103,17 @@ table {
 img {
 	max-width: 100%;
 	height: auto;
-	border-radius: 8px;
+}
+figure {
+	margin: 0;
 }
 code {
-	padding: 2px 5px;
+	padding: 4px 8px;
 	background-color: rgb(var(--gray-light));
-	border-radius: 2px;
+	border-radius: 4px;
 }
 pre {
-	padding: 1.5em;
+	padding: 24px;
 	border-radius: 8px;
 }
 pre > code {
@@ -132,7 +134,7 @@ hr {
 		font-size: 18px;
 	}
 	main {
-		padding: 1em;
+		padding: 16px;
 	}
 }
 
