--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,9 @@
 ---
 import { SITE_TITLE, SITE_AUTHOR, SITE_GITHUB, SITE_AUTHOR_TWITTER } from '../consts';
-const today = new Date();
 ---
 
 <footer>
-	&copy; {today.getFullYear()} {SITE_TITLE} by {SITE_AUTHOR}
+	<span class="copyleft">&copy;</span> {SITE_TITLE} by {SITE_AUTHOR}
 	<div class="social-links">
 		<a href={`https://twitter.com/${SITE_AUTHOR_TWITTER}`} target="_blank">
 			<span class="sr-only">Follow Juan on Twitter</span>
@@ -32,6 +31,10 @@ const today = new Date();
 		background: linear-gradient(var(--gray-gradient)) no-repeat;
 		color: rgb(var(--gray));
 		text-align: center;
+		font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', system-ui, sans-serif;
+		font-weight: 500;
+		letter-spacing: -0.01em;
+		font-size: 0.9em;
 	}
 	.social-links {
 		display: flex;
@@ -45,5 +48,9 @@ const today = new Date();
 	}
 	.social-links a:hover {
 		color: rgb(var(--gray-dark));
+	}
+	.copyleft {
+		display: inline-block;
+		transform: scaleX(-1);
 	}
 </style>
