--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ const isHome = pathname === '/' || pathname === '';
 
 <header>
 	<nav>
-		<h2><a href="/" class:list={{ active: isHome }}>{SITE_TITLE}</a></h2>
+		<a href="/" class:list={['site-title', { active: isHome }]}>{SITE_TITLE}</a>
 		<div class="internal-links">
 			<HeaderLink href="/archive">Archive</HeaderLink>
 			<HeaderLink href="/about">About</HeaderLink>
@@ -21,18 +21,6 @@ const isHome = pathname === '/' || pathname === '';
 		padding: 0 16px;
 		background: white;
 		box-shadow: 0 2px 8px rgba(var(--black), 5%);
-	}
-	h2 {
-		margin: 0;
-		font-size: 1em;
-	}
-
-	h2 a {
-		text-decoration: none;
-	}
-	h2 a.active {
-		text-decoration: none;
-		border-bottom-color: var(--accent);
 	}
 	nav {
 		display: flex;
@@ -48,5 +36,11 @@ const isHome = pathname === '/' || pathname === '';
 	nav a.active {
 		text-decoration: none;
 		border-bottom-color: var(--accent);
+	}
+	.site-title {
+		font-weight: 700;
+		font-family: "Courier New", "Monaco", monospace;
+		letter-spacing: 0.1em;
+		text-transform: uppercase;
 	}
 </style>
