--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import AboutHeroImage from '../assets/blog-placeholder-about.png';
+import AboutHeroImage from '../assets/blog-placeholder-about.webp';
 import Layout from '../layouts/BlogPost.astro';
 ---
 
