--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -16,9 +16,10 @@ interface Props {
 	author?: string;
 	categories?: Array<{ name: string; slug: string }>;
 	tags?: Array<{ name: string; slug: string }>;
+	useNaturalAspectRatio?: boolean;
 }
 
-const { title, description, pubDate, updatedDate, heroImage, imageWidth, imageHeight, dominantColor, author, categories, tags } = Astro.props;
+const { title, description, pubDate, updatedDate, heroImage, imageWidth, imageHeight, dominantColor, author, categories, tags, useNaturalAspectRatio } = Astro.props;
 ---
 
 <html lang="en">
@@ -32,6 +33,8 @@ const { title, description, pubDate, updatedDate, heroImage, imageWidth, imageHe
 			}
 			.hero-image {
 				width: 100%;
+				max-width: 720px;
+				margin: 0 auto;
 			}
 			.image-container {
 				background-color: #f0f0f0;
@@ -44,6 +47,9 @@ const { title, description, pubDate, updatedDate, heroImage, imageWidth, imageHe
 				margin: 0 auto;
 				width: 100%;
 				height: auto;
+			}
+			
+			.hero-image.force-aspect-ratio img {
 				aspect-ratio: 4 / 1;
 				object-fit: cover;
 			}
@@ -77,7 +83,7 @@ const { title, description, pubDate, updatedDate, heroImage, imageWidth, imageHe
 		<Header />
 		<main>
 			<article>
-				<div class="hero-image">
+				<div class={`hero-image ${!useNaturalAspectRatio ? 'force-aspect-ratio' : ''}`}>
 					{heroImage && (
 						<div 
 							class="image-container"
