--- a/src/pages/archive/[...slug].astro
+++ b/src/pages/archive/[...slug].astro
@@ -13,6 +13,6 @@ export async function getStaticPaths() {
 const post = Astro.props;
 ---
 
-<BlogPost {...post.data}>
+<BlogPost {...post.data} useNaturalAspectRatio={true}>
 	<div set:html={post.content} />
 </BlogPost>
